--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "phpstan/phpstan": "^1.7"
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "^7.2",
+        "symfony/var-dumper": "^5.4"
     }
 }
