--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
         "phpstan/phpstan": "^1.7"
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.2",
-        "symfony/var-dumper": "^5.4"
+        "guzzlehttp/guzzle": "^7.2"
     }
 }
